Fixed the way the section headers align and movement for small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
 
 body {
     background-color: #eaefe5;
+    display:block;
 }
 
 header {
@@ -51,27 +52,28 @@ main{
 }
 
 section{
-    padding-top: 20px;
+    padding: 20px;
+    display:block;
 }
 
 section article{
     display:flex;
-    
-    padding: 12px;
-    height: 200px;
+    width: 100%;
+    margin-top: 10px;
+}
 
-    align-items: center;
+.card-head{
+    display: flex;
 }
 
 section article h2{
 
-
-    width: 140px;
-    font-size:36px;
-    padding-right: 30px;
-    padding-bottom: 10px;
-    
-    
+    display: block;
+    font-size: 2em;
+    font-weight: bold;
+    width: 130px;
+    text-align: left;
+    padding-right: 100px;
 }
 
 section article card{
@@ -82,7 +84,7 @@ section article card{
     border-left: 5px solid black;
 }
 section article card p2{
-    display: block;
+    /* display: block; */
 }
 
 @media screen and (max-width: 900px) {
@@ -91,6 +93,11 @@ section article card p2{
     nav {
         float: none;
       flex-direction: column;
+    }
+
+    main{
+        /* display:flex; */
+        /* justify-content: space-around; */
     }
 
     nav, header h1{
@@ -108,21 +115,41 @@ section article card p2{
     }
 
     section {
-        justify-content: space-around;
+        
+        display:block;
+        margin: 5px;
+        
     }
     section article{
         display:flex;
-        justify-content: space-around;
+        /* justify-content: space-evenly; */
         flex-direction: column;
+        /* flex-flow:column; */
+        align-items: center;
     }
 
-    section article card h2{
-        display: flex;
-        border: 5px solid black;
+    section article h2{
+        
+        display: block;
+        /* background-color: blue; */
+        border-bottom: 5px solid black;
+        width:auto;
+        text-align: center;
+        /* justify-content: center; */
+        font-size: 32px;
+        padding: 2px;
+        margin: 5px;
+
+
     }
     section article card{
-        display:flex;
+        /* display:flex; */
+        display: block;
         border: none;
+    }
+
+    section article card p{
+        display:block;
     }
     /* Make the sidebar stack below the body */
     aside {
